# avgvsto

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  fly.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
config/: default.toml  development.toml
crates/avgvsto-audit/: Cargo.toml
crates/avgvsto-audit/src/: models.rs  store.rs
crates/avgvsto-auth/: Cargo.toml
crates/avgvsto-auth/src/: jwt.rs  lib.rs  password.rs  rate_limit.rs
crates/avgvsto-auth/tests/: auth_integration.rs
crates/avgvsto-core/: Cargo.toml
crates/avgvsto-core/src/: crypto.rs  error.rs  lib.rs  secure_delete.rs  types.rs  usb.rs
crates/avgvsto-core/tests/: crypto_integration.rs
crates/avgvsto-server/: Cargo.toml
crates/avgvsto-server/src/: config.rs  error.rs  main.rs
crates/avgvsto-server/src/db/: mod.rs  models.rs
crates/avgvsto-server/src/middleware/: auth.rs
crates/avgvsto-server/src/routes/: admin.rs  auth.rs  crypto.rs  health.rs  mod.rs  ws.rs
crates/avgvsto-server/src/ws/: mod.rs
frontend/: _redirects  index.html  wrangler.jsonc
migrations/: 001_initial_schema.sql
