[package]
name = "avgvsto-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Audit logging module for AVGVSTO — structured events, PostgreSQL persistence"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio.workspace = true
