[package]
name = "avgvsto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core cryptographic library for AVGVSTO — AES-256-GCM, ChaCha20-Poly1305, key derivation, USB binding, secure delete"

[dependencies]
serde.workspace = true
thiserror.workspace = true
rand.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Cryptography
aes-gcm.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
ring.workspace = true

# Filesystem
bytesize.workspace = true

# Encoding
hex = "0.4"

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }

# Database (for FromRow impl)
sqlx = { version = "0.8", features = ["tls-rustls", "postgres", "uuid", "chrono"] }

[dev-dependencies]
serde_json.workspace = true
